--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
 <body>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script>
+<!--  <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv-printshiv.min.js"></script> -->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
@@ -113,11 +113,11 @@ for breaking larger programs into smaller, more manageable pieces.</p>
   <li><a href="/pdf/1.04-jQuery-Plugins.pdf" 
     aria-label="1.04 jQuery Plugins (display PDF)." 
     target="_blank" rel="noreferrer noopener">
-    1.04 jQuery Plugins (display PDF)</a><br><br></li>
+    1.04 jQuery Plugins (display PDF)</a></li>
   <li><a href="/zip/1.04-FlexSliderBasic-START.zip" 
     aria-label="1.04 Flex Slider Basic START (download ZIP)." 
     target="_blank" rel="noopener noreferrer">
-    1.04 Flex Slider Basic START (download ZIP)</a><br><br></li>
+    1.04 Flex Slider Basic START (download ZIP)</a></li>
   <li><a href="/zip/1.04-FlexSliderPlugin.zip" 
     aria-label="1.04 Flex Slider Plugin (download ZIP)." 
     target="_blank" rel="noopener noreferrer">
@@ -220,19 +220,19 @@ for breaking larger programs into smaller, more manageable pieces.</p>
   <li><a href="/zip/2.29-ScriptionPart1-START.zip" 
     target="_blank" rel="noreferrer noopener" 
 	aria-label="2.29 Scription Part 1 START (download ZIP).">
-    2.29 Scription Part 1 START (download ZIP)</a><br><br></li>
+    2.29 Scription Part 1 START (download ZIP)</a></li>
   <li><a href="/zip/2.29-ScriptionPart1-Snippets.zip" 
     target="_blank" rel="noreferrer noopener" 
 	aria-label="2.29 Scription Part 1 Snippets (download ZIP).">
-    2.29 Scription Part 1 Snippets (download ZIP)</a><br><br></li>
+    2.29 Scription Part 1 Snippets (download ZIP)</a></li>
   <li><a href="/zip/2.29-ScriptionPart2-START.zip" 
     target="_blank" rel="noreferrer noopener"
 	aria-label="2.29 Scription Part 2 START (download ZIP).">
-    2.29 Scription Part 2 START (download ZIP)</a><br><br></li>
+    2.29 Scription Part 2 START (download ZIP)</a></li>
   <li><a href="/zip/2.29-ScriptionPart2-Snippets.zip" 
     target="_blank" rel="noreferrer noopener" 
 	aria-label="2.29 Scription Part 2 Snippets (download ZIP).">
-    2.29 Scription Part 2 Snippets (download ZIP)</a><br><br></li>
+    2.29 Scription Part 2 Snippets (download ZIP)</a></li>
   <li><a href="/zip/2.29-FlexSliderFiles-START.zip" 
     target="_blank" rel="noreferrer noopener" 
 	aria-label="2.29 Flex Slider Files START (download ZIP).">
@@ -256,7 +256,7 @@ for breaking larger programs into smaller, more manageable pieces.</p>
   <li><a href="/pdf/2.39-ScriptionSitePart1-HTML-CSS.pdf" 
     aria-label="2.39 Scription Site Part 1 HTML &amp; CSS (display PDF)."
     target="_blank" rel="noreferrer noopener">
-    2.39 Scription Site Part 1 HTML &amp; CSS (display PDF)</a><br><br></li>
+    2.39 Scription Site Part 1 HTML &amp; CSS (display PDF)</a></li>
   <li><a href="/pdf/2.39-ScriptionSitePart2-InteractionChallenges.pdf" 
     aria-label="2.39 Scription Site Part 2 Interchange Challenges (display PDF)." 
     target="_blank" rel="noreferrer noopener">
@@ -289,7 +289,7 @@ for breaking larger programs into smaller, more manageable pieces.</p>
   <li><a href="/pdf/3.07-JS-Object-Challenges.pdf" 
     aria-label="3.07 JavaScript Object Challenges (display PDF)."
     target="_blank" rel="noreferrer noopener">
-    3.07 JS Objects Challenges (display PDF)</a><br><br></li>
+    3.07 JS Objects Challenges (display PDF)</a></li>
   <li><a href="/pdf/3.07-JS-Objects-Data.pdf" 
     aria-label="3.07 JavaScript Objects and Data (display PDF)."
     target="_blank" rel="noreferrer noopener">
@@ -391,11 +391,11 @@ image sliders.</p>
   <li><a href="/pdf/1.04-jQuery-Plugins.pdf" 
     aria-label="1.04 jQuery Plugins (display PDF)." 
     target="_blank" rel="noreferrer noopener">
-    1.04 jQuery Plugins (display PDF)</a><br><br></li>
+    1.04 jQuery Plugins (display PDF)</a></li>
   <li><a href="/zip/1.04-FlexSliderBasic-START.zip" 
     aria-label="1.04 FlexSlider Basic START (download ZIP)." 
     target="_blank" rel="noopener noreferrer">
-    1.04 FlexSlider Basic START (download ZIP)</a><br><br></li>
+    1.04 FlexSlider Basic START (download ZIP)</a></li>
   <li><a href="/zip/1.04-FlexSliderPlugin.zip" 
     aria-label="1.04 FlexSlider Plugin (download ZIP)." 
     target="_blank" rel="noopener noreferrer">
@@ -556,7 +556,7 @@ series of challenges.</p>
   <li><a href="/pdf/2.39-ScriptionSitePart1-HTML-CSS.pdf" 
     aria-label="2.39 Scription Site Part 1 HTML and CSS (display PDF)."
     target="_blank" rel="noreferrer noopener">
-    2.39 Scription Site Part 1 HTML &amp; CSS (display PDF)</a><br><br></li>
+    2.39 Scription Site Part 1 HTML &amp; CSS (display PDF)</a></li>
   <li><a href="/pdf/2.39-ScriptionSitePart2-InteractionChallenges.pdf" 
     aria-label="2.39 Scription Site Part 2 Interaction Challenges (display PDF)."
     target="_blank" rel="noreferrer noopener">
@@ -966,7 +966,7 @@ each time.</p>
   title="1.04 Gotchas and Rookie Mistakes, #1"
   alt="1.04 Gotchas and Rookie Mistakes, #1."
   style="width:40%;" />
-<br><br>
+
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~ 14. gotchas and rookie mistakes, #2 (16) ~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
@@ -1473,7 +1473,7 @@ mean about how to do this.</p>
   title="styles.css and load jQuery"
   alt="styles.css and load jQuery."
   style="width:50%" >
-<br><br>
+
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~ 42/43. where to put scripts, css & js (31) ~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="border"
@@ -1710,7 +1710,7 @@ here is that the latest version of jQuery does not support this file.</p>
   title="jQuery snippet"
   alt="jQuery snippet."
   style="width:50%" >
-<br><br>
+
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~ 59. load defer jquery in index.html (39) ~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="border displayed"
@@ -5194,7 +5194,7 @@ spit out in the console. Well, we'll do that in the next lesson.</p>
   title="2.20 Getting the Target -- Part 2"
   alt="2.20 Getting the Target -- Part 2."
   style="width:40%;" />
-  <br><br>
+  
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~ 277. generate top of section in pixel for image height (143) ~~~~~~~~~~~~~~~-->
 <img class="displayed"
@@ -11761,14 +11761,15 @@ you'll get more practice. So I look forward to seeing you there.</p>
 
 <p>..the end…</p>
 
-<h6>Prior Update 1/30/2024 9:07pm</h6>
-<h6>Last Updated 5/31/2024 11+am</h6>
-<h6>Last Updated 6/10/2024 10+pm</h6>
-<h6>Last Updated 6/17/2024 Mon 3+pm</h6>
-<h6>Last Updated 6/25/2024 Tue 8+pm</h6>
-<h6>Last Updated 7/12/2024 Fri 1+am</h6>
-<h6>Last Updated 7/18/2024 Thu 10+am</h6>
-<h6>Last Updated 9/26/2024 Thu 4+pm</h6>
+<h6>Prior Update 1/30/2024 9:07pm</br>
+Last Updated 5/31/2024 11+am<br/>
+Last Updated 6/10/2024 10+pm<br/>
+Last Updated 6/17/2024 Mon 3+pm<br/>
+Last Updated 6/25/2024 Tue 8+pm<br/>
+Last Updated 7/12/2024 Fri 1+am<br/>
+Last Updated 7/18/2024 Thu 10+am<br/>
+Last Updated 9/26/2024 Thu 4+pm<br/>
+Last Updated 10/01/2024 Tue 10+pm</h6>
 
 </body>
 </html>
