--- a/index.html
+++ b/index.html
@@ -607,7 +607,10 @@ problem down into smaller pieces.</p>
 </ol>
 
 <ul>
-  <li>3.08 Pig Dice Game Diagrams</li>
+  <li><a href="/pdf/3.08-PigDiceGame-Diagrams.png" 
+    aria-label="3.08 Pig Dice Game Diagrams (display PNG)."
+    target="_blank" rel="noreferrer noopener">
+    3.08 Pig Dice Game Diagrams (display PNG)</a></li>
 </ul>
 
 <ol start="9" type="1">
@@ -617,7 +620,10 @@ problem down into smaller pieces.</p>
 </ol>
 
 <ul>
-  <li>3.11 Intro to Pig Dice Game</li>
+  <li><a href="/pdf/3.11-IntrotoPigDiceGame.pdf" 
+    aria-label="3.11 Introduction to the Pig Dice Game (display PDF)."
+    target="_blank" rel="noreferrer noopener">
+    3.11 Introduction to the Pig Dice Game (display PDF)</a></li>
 </ul>
 
 <h3>Module (Week) Four:</h3>
@@ -637,7 +643,10 @@ script in many creative ways.</p>
 </ol>
 
 <ul>
-  <li>4.02 Start Files: Game of Pig</li>
+  <li><a href="/zip/4.02-GameofPig-START.zip" 
+    target="_blank" rel="noreferrer noopener"
+	aria-label="4.02 Game of Pig (download ZIP).">
+    4.02 Game of Pig START (download ZIP)</a></li>
 </ul>
 
 <ol start="3" type="1">
@@ -656,7 +665,10 @@ script in many creative ways.</p>
 </ol>
 
 <ul>
-  <li>4.14 Game of Pig</li>
+  <li><a href="/pdf/4.14-GameofPig.pdf" 
+    aria-label="4.14 Game of Pig (display PDF)."
+    target="_blank" rel="noreferrer noopener"> 
+    4.14 Game of Pig (display PDF)</a></li>
 </ul>
 
 <ol start="15" type="1">
@@ -1496,18 +1508,16 @@ mean about how to do this.</p>
   alt="Where to put scripts, CSS and JavaScript." >
 <p style="clear: both;"></p>
 
-<p>First, we can look at where these scripts go, and over here, notice
-this one is listing jQuery 1.6.2, that's a really old version of jQuery.
-And then we've got the flex slider JS here, we've got the CSS file. I'd
-rather load up the most recent version of jQuery rather than the old
-version of jQuery.</p>
+<p>First, we can look at where these scripts go, and over here, notice this one is listing 
+jQuery 1.6.2, that's a really old version of jQuery. And then we've got the flex slider JS 
+here, we've got the CSS file. I'd rather load up the most recent version of jQuery rather 
+than the old version of jQuery.</p>
 
-<p>Let's go over to our files over here. And on our index page, up at the
-top of the page, this is where we want to put a link to the FlexSlider
-CSS. So, I'm just going to add a link here, link href = "
-flexslider.css". Don't forget rel ="stylesheet", and make sure you spell
-style sheet right. Okay, so that will link that up. You can see I've got
-jQuery 2.2.4 loaded here, as opposed to the 1.6.</p>
+<p>Let's go over to our files over here. And on our index page, up at the top of the page, 
+this is where we want to put a link to the FlexSlider CSS. So, I'm just going to add a link 
+here, link href = "flexslider.css". Don't forget rel ="stylesheet", and make sure you spell
+style sheet right. Okay, so that will link that up. You can see I've got jQuery 2.2.4 loaded 
+here, as opposed to the 1.6.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 44. jquery version to load (31) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="border displayed"
@@ -1517,11 +1527,11 @@ jQuery 2.2.4 loaded here, as opposed to the 1.6.</p>
   alt="jQuery version to load."
   style="width:50%" >
 
-<p>But I'm actually going to load the most recent version of jQuery. So, I'm 
-going to come back here and I'm going to go and look for jQuery cdn in google, 
-Google Hosted Libraries. I'm going to go find jQuery. And here is the latest 
-version of jQuery. You'll notice it's been updated recently to 3.6, okay. So, 
-I'm going to replace this version of jQuery with that one.</p>
+<p>But I'm actually going to load the most recent version of jQuery. So, I'm going to come 
+back here and I'm going to go and look for jQuery cdn in google, Google Hosted Libraries. 
+I'm going to go find jQuery. And here is the latest version of jQuery. You'll notice it's 
+been updated recently to 3.6, okay. So, I'm going to replace this version of jQuery with 
+that one.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <!--~~~~~~~~~~~~~~~~~~~~~~~~ 45. load jquery at bottom of screen (32) ~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="border displayed"
@@ -11802,84 +11812,70 @@ are more challenging if you really want to try to do them.</p>
   loading="lazy"
   title="Easy ways to extend the game"
   alt="Easy ways to extend the game."
-  style="width:40%" />
+  style="width:50%" />
 
-<p>The first is when you roll a one, it zeros out the cumulative score for
-that turn. If you think about this game the way it is now over here,
-when you play this game, there's no reason to ever click pass, really.
-You're just going to roll again until you get a one. There's no
-strategic reason to ever click pass. But what if you roll the one, you
+<p>The first is when you roll a one, it zeros out the cumulative score for that turn. If 
+you think about this game the way it is now over here, when you play this game, there's 
+no reason to ever click pass, really. You're just going to roll again until you get a 
+one. There's no strategic reason to ever click pass. But what if you roll the one, you
 lose all of the points that you gained during that turn.</p>
 
-<p>Remember, rolling two ones loses all the points you've got in the game
-so far, but rolling one would lose all the points you've gained for
-that turn. If you've got a couple of big rolls in there, you've rolled
-the nine, you've got this 12 or whatever. Now pass could be strategically
-something that you want to do. Again, it's still just dumb luck as to
-whether you're going to win or lose, but pass could be more strategic.</p>
+<p>Remember, rolling two ones loses all the points you've got in the game so far, but 
+rolling one would lose all the points you've gained for that turn. If you've got a couple 
+of big rolls in there, you've rolled the nine, you've got this 12 or whatever. Now pass 
+could be strategically something that you want to do. Again, it's still just dumb luck as 
+to whether you're going to win or lose, but pass could be more strategic.</p>
 
-<p>If you were going to do that, if you were going to add that feature into
-this game, what would you need to do? What would you need to add? I
-don't think it would be all that difficult. I think you could go back to
-your object up here, and you could create another variable that says,
-turn some, or something like that, and each time a value gets added to
-the turn some, you can increase that variable. If a one is rolled,
-you're going to subtract that from that player's score. They lose those
-points for that turn.</p>
+<p>If you were going to do that, if you were going to add that feature into this game, 
+what would you need to do? What would you need to add? I don't think it would be all that 
+difficult. I think you could go back to your object up here, and you could create another 
+variable that says, turn some, or something like that, and each time a value gets added to
+the turn some, you can increase that variable. If a one is rolled, you're going to subtract 
+that from that player's score. They lose those points for that turn.</p>
 
-<p>Just by adding one more property into the game data, you could add that
-feature in fairly easily. You just have to remember to update the rules.
-But that's just one way of updating the scheme. There are other easy
-ways you could make some better graphics or better interface, make it
-look nicer, make it clear whose turn it is and what the score is. None
-of this stuff is working terribly well over here for what I have so far.
-It's okay but it's not. It's certainly not great. You can make it much
-better. That's something you can do that doesn't even involve a lot of
-programming that's really just design work.</p>
+<p>Just by adding one more property into the game data, you could add that feature in 
+fairly easily. You just have to remember to update the rules. But that's just one way of 
+updating the scheme. There are other easy ways you could make some better graphics or 
+better interface, make it look nicer, make it clear whose turn it is and what the score 
+is. None of this stuff is working terribly well over here for what I have so far. It's 
+okay but it's not. It's certainly not great. You can make it much better. That's something 
+you can do that doesn't even involve a lot of programming that's really just design work.</p>
 
-<p>You can create form fields for the players name so that instead of
-player 1 and good player 2. When you start the game, when you click,
-Start. Instead of randomly pick a player, you could actually enter and
-you get to form fields here. Player 1 and player 2. Add those form
-fields in there. Again, you could replace these things here with the
-names that somebody types into the field so that it's not just player 1
-player 2. You could do that thing, that would be more challenging, but
-would be a fun thing to do. You could replace the dice with cards.
-There's no reason why it has to be dice.</p>
+<p>You can create form fields for the players name so that instead of player 1 and good 
+player 2. When you start the game, when you click, Start. Instead of randomly pick a player, 
+you could actually enter and you get to form fields here. Player 1 and player 2. Add those 
+form fields in there. Again, you could replace these things here with the names that somebody 
+types into the field so that it's not just player 1 player 2. You could do that thing, that 
+would be more challenging, but would be a fun thing to do. You could replace the dice with 
+cards. There's no reason why it has to be dice.</p>
 
-<p>You could make a cool card game. There's no reason that it has to be
-1-6. You could have 20 possible cards for each person and have more
-values. What would you need to change in order to do that? You could
-allow the player to set a threshold for what wins the game. Right now
-it's up to 30, which isn't very much, and you could just manually up it
-to 100. But what if when you start the game, you have a field that says
-or it could you even be a drop down field for 30, 50 or 100, whatever
-you want, and the player picks what the threshold for winning is going
-to be for that game. You could do that. That would be an easy thing to
-add into the game. Again, it's just updating the data in that game data
+<p>You could make a cool card game. There's no reason that it has to be 1-6. You could have 
+20 possible cards for each person and have more values. What would you need to change in 
+order to do that? You could allow the player to set a threshold for what wins the game. 
+Right now it's up to 30, which isn't very much, and you could just manually up it to 100. 
+But what if when you start the game, you have a field that says or it could you even be a 
+drop down field for 30, 50 or 100, whatever you want, and the player picks what the 
+threshold for winning is going to be for that game. You could do that. That would be an 
+easy thing to add into the game. Again, it's just updating the data in that game data
 object at the top of the game.</p>
 
-<p>Then there's some more challenging ways to extend the game. You get add
-more players. Where if you had three players or four players or what if
-you could choose how many players you wanted to have playing the game.
-What would you have to add in order to do that, that's a little bit more
-complex because now that game index thing at the top of the page needs
-to be different. This needs to work differently because it's not going
-to just be a zero or one in or ternary operators are no longer going to
-work because those will only handle two values, either one or zero. But
-you can certainly do it. That wouldn't be that hard. That would be
-something more to do.</p>
+<p>Then there's some more challenging ways to extend the game. You get add more players. 
+Where if you had three players or four players or what if you could choose how many players 
+you wanted to have playing the game. What would you have to add in order to do that, that's 
+a little bit more complex because now that game index thing at the top of the page needs 
+to be different. This needs to work differently because it's not going to just be a zero 
+or one in or ternary operators are no longer going to work because those will only handle 
+two values, either one or zero. But you can certainly do it. That wouldn't be that hard. 
+That would be something more to do.</p>
 
-<p>You could add more dice. What if you add more than two dice? What if you
-had three or four, you could add other conditions that affect the game
-score. What if somebody rolls two sixs' is what happens then? Maybe
-their score doubles? I don't know. You could do all fun things with
-these. There are lots of other ways that you could think of to come up
-with extending this game. That's your next job, is to really think about
-some things that you could do to extend this game and make it a more
-interesting better game. I look forward to seeing what people post on
-the discussion board. I'll check in from time to time and see what
-excellent versions people have made of the big game.</p>
+<p>You could add more dice. What if you add more than two dice? What if you had three or 
+four, you could add other conditions that affect the game score. What if somebody rolls 
+two sixs' is what happens then? Maybe their score doubles? I don't know. You could do all 
+fun things with these. There are lots of other ways that you could think of to come up
+with extending this game. That's your next job, is to really think about some things that 
+you could do to extend this game and make it a more interesting better game. I look forward 
+to seeing what people post on the discussion board. I'll check in from time to time and 
+see what excellent versions people have made of the big game.</p>
 
 <ul>
   <li><a href="./pdf/4.14-GameofPig.pdf" 
@@ -11899,21 +11895,18 @@ excellent versions people have made of the big game.</p>
   alt="4.15 Course Summary: Interactivity with JavaScript and jQuery."
   style="width:40%" />
 
-<p>Congratulations for making it to the end of our third course on
-JavaScript and therefore, of course, specialization. We've done a lot.
-You've learned a lot of JavaScript so far. In the first course we
-covered a lot of basics, a lot of basic syntax. We did a lot of
-challenges to get good at that syntax, and the second course, we
-introduced <b>jQuery</b> and we created some great interface elements
-that are very simple and easy to integrate into web pages. In this
-course, we've gotten even deeper into it with <b>jQuery plug-ins</b> and
-we even created a game.</p>
+<p>Congratulations for making it to the end of our third course on JavaScript and therefore, 
+of course, specialization. We've done a lot. You've learned a lot of JavaScript so far. In 
+the first course we covered a lot of basics, a lot of basic syntax. We did a lot of 
+challenges to get good at that syntax, and the second course, we introduced <b>jQuery</b> 
+and we created some great interface elements that are very simple and easy to integrate 
+into web pages. In this course, we've gotten even deeper into it with <b>jQuery plug-ins</b> 
+and we even created a game.</p>
 
-<p>With all of this, you've really developed a lot of JavaScript skills
-so far. We have a fourth course in the specialization, and in that
-course, we'll get even more complex scripts, and I promise you're going
-to learn even more JavaScript and you'll get even better at it and
-you'll get more practice. So I look forward to seeing you there.</p>
+<p>With all of this, you've really developed a lot of JavaScript skills so far. We have a 
+fourth course in the specialization, and in that course, we'll get even more complex scripts, 
+and I promise you're going to learn even more JavaScript and you'll get even better at it 
+and you'll get more practice. So I look forward to seeing you there.</p>
 
 <p>..the end…</p>
 
