--- a/index.html
+++ b/index.html
@@ -8868,7 +8868,7 @@ except for the last one. And that's really kind of important as well. So
 you'll have key value pairs and one on each line, one key value pair in
 each line followed with a comma.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<!--~~~~~~~~~~~~~~~~~~~~~~~~ 527. console example, array (254) ~~~~~~~~~~~~~~~~~~~~~~~-->
+<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ 527. console example, array (254) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="displayed"
   src="./images/image527.png"
   loading="lazy"
@@ -9116,6 +9116,7 @@ javascript, so that's important.</p>
   title="Example, Object constructor"
   alt="Example, Object constructor."
   style="width:50%" />
+
 <p>The next thing to talk about is the <b>object constructor</b>. This will
 push our <b>objects</b>, even further into something even more useful.
 And what an <b>object constructor</b> does, is it creates a <b>use
