--- a/index.html
+++ b/index.html
@@ -2827,8 +2827,8 @@ content is passing beneath this header.</p>
   src="./images/image135.png"
   loading="lazy"
   style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
-  title="Add padding-top: 200 to body of style.css"
-  alt="Add padding-top: 200 to body of style.css." />
+  title="Add padding-top: 200 to body of styles.css"
+  alt="Add padding-top: 200 to body of styles.css." />
 &nbsp;&nbsp;&nbsp;
 <img class="border"
   src="./images/image136.png"
@@ -5002,7 +5002,7 @@ doing it twice will actually help you, and I think you will see that
 there's a lot of similarities between the JavaScript version, and the
 jQuery version.</p>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<!--~~~~~~~~~~~~~~~~~~~~~~~~~ 266/267. index.html and style.css (137) ~~~~~~~~~~~~~~~~~~~~~~~~~~-->
+<!--~~~~~~~~~~~~~~~~~~~~~~~~ 266/267. index.html and styles.css (137) ~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 <img class="border"
   src="./images/image266.png"
   loading="lazy"
@@ -5014,8 +5014,8 @@ jQuery version.</p>
   src="./images/image267.png"
   loading="lazy"
   style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
-  title="style.css, body padding-top 200px, header position fixed, height 160px"
-  alt="style.css, body padding-top 200px, header position fixed, height 160px." />
+  title="styles.css, body padding-top 200px, header position fixed, height 160px"
+  alt="styles.css, body padding-top 200px, header position fixed, height 160px." />
 <p style="clear: both;"></p>
 
 <p>The second thing I want you to notice is that, to remember that
