--- a/index.html
+++ b/index.html
@@ -1354,7 +1354,7 @@ well.</p>
   alt="flexslider.css, fonts and jquery.flexslider-min.js." />
 <p style="clear: both;"></p>
 
-<p>I'm going to grab the FlexSlider.css, the fonts, and the minified
+<p>I'm going to grab the flexSlider.css, the fonts, and the minified
 version of FlexSlider. Just those three files, the rest of it I don't
 need. I'm going to put them into my project folder over here so that I
 have them, and that gets us all the files that we need in order to get
@@ -2511,8 +2511,8 @@ and do this, but let's go ahead and add this rule to our style sheet.</p>
   src="./images/image115.png"
   loading="lazy"
   style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
-  title="Styles.css for Call to Action"
-  alt="Styles.css for Call to Action." />
+  title="styles.css for Call to Action"
+  alt="styles.css for Call to Action." />
 <p style="clear: both;"></p>
 
 <p>If you come over here, you can see that I have it here, it's a long
@@ -2555,8 +2555,8 @@ the text. That's a lot of stuff.</p>
   src="./images/image116.png"
   loading="lazy"
   style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
-  title="Styles.css: Define new class .light"
-  alt="Styles.css: Define new class .light." />
+  title="styles.css: Define new class .light"
+  alt="styles.css: Define new class .light." />
 &nbsp;&nbsp;&nbsp;
 <img class="border"
   src="./images/image117.png"
@@ -7229,8 +7229,8 @@ not stick with it exactly, but it is helpful to do that.</p>
   src="./images/image411.png"
   loading="lazy"
   style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
-  title="Styles.css template/documentation"
-  alt="Styles.css template/documentation." />
+  title="styles.css template/documentation"
+  alt="styles.css template/documentation." />
 <p style="clear: both;"></p>
 
 <p>All right, so you can come over to our snippets here, and copy this
@@ -7623,8 +7623,8 @@ with it. If you screwed up, just paste it back in again, it's not a big deal.</p
 <img class="displayed"
   src="./images/image441.png"
   loading="lazy"
-  title="Styles.css, overview section"
-  alt="Styles.css, overview section."
+  title="styles.css, overview section"
+  alt="styles.css, overview section."
   style="width:50%" />
 
 <p>We put that in. I'm not going to go through and describe all of these, but they're 
@@ -7969,8 +7969,8 @@ for the lesson and our team.</p>
   src="./images/image469.png"
   loading="lazy"
   style="width:45%; float: left; margin-left: 3%; margin-bottom: 1em;"
-  title="Styles.css for listen and ourteam article, figure, img"
-  alt="Styles.css for listen and ourteam article, figure, img." />
+  title="styles.css for listen and ourteam article, figure, img"
+  alt="styles.css for listen and ourteam article, figure, img." />
 <p style="clear: both;"></p>
 
 <p>Then we'll do a few minor changes for the footer as well. So it's great to 
