--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ for breaking larger programs into smaller, more manageable pieces.</p>
   <h4><a href="#ch1-04">1.04 Gotchas and Rookie Mistakes</a></h4>
 </blockquote>
 
-<ul>
+<ul style="line-height:150%">
   <li><a href="/pdf/1.04-jQuery-Plugins.pdf" 
     aria-label="1.04 jQuery Plugins (display PDF)." 
     target="_blank" rel="noreferrer noopener">
@@ -216,7 +216,7 @@ for breaking larger programs into smaller, more manageable pieces.</p>
   <h4><a href="#ch2-29">2.29 Scription Site Introduction</a></h4>
 </blockquote>
 
-<ul>
+<ul style="line-height:150%">
   <li><a href="/zip/2.29-ScriptionPart1-START.zip" 
     target="_blank" rel="noreferrer noopener" 
 	aria-label="2.29 Scription Part 1 START (download ZIP).">
@@ -252,7 +252,7 @@ for breaking larger programs into smaller, more manageable pieces.</p>
   <h4><a href="#ch2-39">2.39 Scription Site: Building Interactive Elements Challenges</a></h4>
 </blockquote>
 
-<ul>
+<ul style="line-height:150%">
   <li><a href="/pdf/2.39-ScriptionSitePart1-HTML-CSS.pdf" 
     aria-label="2.39 Scription Site Part 1 HTML &amp; CSS (display PDF)."
     target="_blank" rel="noreferrer noopener">
@@ -285,7 +285,7 @@ for breaking larger programs into smaller, more manageable pieces.</p>
   <h4><a href="#ch3-07">3.07 Example File</a></h4>
 </blockquote>
 
-<ul>
+<ul style="line-height:150%">
   <li><a href="/pdf/3.07-JS-Object-Challenges.pdf" 
     aria-label="3.07 JavaScript Object Challenges (display PDF)."
     target="_blank" rel="noreferrer noopener">
@@ -387,7 +387,7 @@ image sliders.</p>
   <li>Gotchas and Rookie Mistakes</li>
 </ol>
 
-<ul>
+<ul style="line-height:125%">
   <li><a href="/pdf/1.04-jQuery-Plugins.pdf" 
     aria-label="1.04 jQuery Plugins (display PDF)." 
     target="_blank" rel="noreferrer noopener">
@@ -437,7 +437,7 @@ series of challenges.</p>
 
 <h5>39 videos, 5 readings, 7 zip files</h5>
 
-<ol type="1">
+<ol type="2.1">
   <li>Module 2 Introduction (:38)</li>
   <li>Introduction to Smooth Scroll with jQuery (4:15)</li>
 </ol>
@@ -449,7 +449,7 @@ series of challenges.</p>
     2.02 jQuery Scroll Effects START (download ZIP)</a></li>
 </ul>
 
-<ol start="3" type="1">
+<ol start="2.3" type="1">
   <li>Creating a Click Handler (5:00)</li>
   <li>Adding the Animation (6:56)</li>
   <li>Add Some Easing and a Callback Function (4:05)</li>
@@ -463,7 +463,7 @@ series of challenges.</p>
     2.06 jQuery Smoother Scroll Effects (display PDF)</a></li>
 </ul>
 
-<ol start="7" type="1">
+<ol start="2.7" type="1">
   <li>Introduction to Page Location Tracking (8:00)</li>
   <li>The Crux of the Problem (6:09)</li>
   <li>Strategy (8:27)</li>
@@ -485,7 +485,7 @@ series of challenges.</p>
     2.17 jQuery Page Location Tracking (display PDF)</a></li>
 </ul>
 
-<ol start="18" type="1">
+<ol start="2.18" type="1">
   <li>Introduction to Scroll Effects with JS (6:04)</li>
 </ol>
 
@@ -496,7 +496,7 @@ series of challenges.</p>
     2.18 JS Scroll Effects START (download ZIP)</a></li>
 </ul>
 
-<ol start="19" type="1">
+<ol start="2.19" type="1">
   <li>Getting the Target - Part 1 (4:50)</li>
   <li>Getting the Target - Part 2 (5:15)</li>
   <li>Smooth Scroll Polyfill (4:45)</li>
@@ -516,11 +516,11 @@ series of challenges.</p>
     2.28 JS Scroll Effects (display PDF)</a></li>
 </ul>
 
-<ol start="29" type="1">
+<ol start="2.29" type="1">
   <li>Scription Site Introduction (5:54)</li>
 </ol>
 
-<ul>
+<ul style="line-height:125%">
   <li><a href="/zip/2.29-ScriptionPart1-START.zip" 
     aria-label="2.29 Scription Part 1 START (download ZIP)."
     target="_blank" rel="noreferrer noopener">
@@ -539,7 +539,7 @@ series of challenges.</p>
 	2.29 Scription Part 2 Snippets (download ZIP)</a></li>
 </ul>
 
-<ol start="30" type="1">
+<ol start="2.30" type="1">
   <li>Header HTML (5:09)</li>
   <li>Pricing HTML</li>
   <li>Beginning Styling</li>
@@ -552,7 +552,7 @@ series of challenges.</p>
   <li>Scription Site: Building Interactive Elements Challenges</li>
 </ol>
 
-<ul>
+<ul style="line-height:125%">
   <li><a href="/pdf/2.39-ScriptionSitePart1-HTML-CSS.pdf" 
     aria-label="2.39 Scription Site Part 1 HTML and CSS (display PDF)."
     target="_blank" rel="noreferrer noopener">
@@ -575,7 +575,7 @@ problem down into smaller pieces.</p>
 
 <h5>11 videos, 4 readings</h5>
 
-<ol type="1">
+<ol type="1" start "3.01">
   <li>Module Introduction</li>
   <li>Introduction to Objects and Data in JS</li>
 </ol>
@@ -587,7 +587,7 @@ problem down into smaller pieces.</p>
     3.02 JS Objects START (download ZIP)</a></li>
 </ul>
 
-<ol start="3" type="1">
+<ol start="3.03" type="1">
   <li>Objects Can Contain Arrays and Other Objects</li>
   <li>Functions Inside Objects Equals Methods</li>
   <li>Putting Objects and Functions Together</li>
@@ -602,7 +602,7 @@ problem down into smaller pieces.</p>
     3.07 JS Object Challenges (display PDF)</a></li>
 </ul>
 
-<ol start="8" type="1">
+<ol start="3.08" type="1">
   <li>Introduction to Pig Dice Game</li>
 </ol>
 
@@ -637,7 +637,7 @@ script in many creative ways.</p>
 
 <h5>15 videos, 2 readings</h5>
 
-<ol type="1">
+<ol type="1" start "4.01">
   <li>Module Introduction</li>
   <li>Intro to the Game of Pig</li>
 </ol>
@@ -649,7 +649,7 @@ script in many creative ways.</p>
     4.02 Game of Pig START (download ZIP)</a></li>
 </ul>
 
-<ol start="3" type="1">
+<ol start="4.03" type="1">
   <li>Start the Game</li>
   <li>Set Up the Turn</li>
   <li>Throwing the Dice</li>
@@ -671,7 +671,7 @@ script in many creative ways.</p>
     4.14 Game of Pig (display PDF)</a></li>
 </ul>
 
-<ol start="15" type="1">
+<ol start="4.15" type="1">
   <li>Course Summary</li>
 </ol>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
