--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <head>
   <meta charset="utf-8" />
   <link rel="shortcut icon" type="image/jpg" href="/images/favicon.ico">
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
   <meta name="author" content="Brian Bauska (bbauska)" />
   <meta name="title" content="UC @Davis' Interactivity with JS and jQuery" />
@@ -437,7 +436,7 @@ series of challenges.</p>
 
 <h5>39 videos, 5 readings, 7 zip files</h5>
 
-<ol type="2.1">
+<ol type="1">
   <li>Module 2 Introduction (:38)</li>
   <li>Introduction to Smooth Scroll with jQuery (4:15)</li>
 </ol>
@@ -449,7 +448,7 @@ series of challenges.</p>
     2.02 jQuery Scroll Effects START (download ZIP)</a></li>
 </ul>
 
-<ol start="2.3" type="1">
+<ol type="1" start="3">
   <li>Creating a Click Handler (5:00)</li>
   <li>Adding the Animation (6:56)</li>
   <li>Add Some Easing and a Callback Function (4:05)</li>
@@ -463,7 +462,7 @@ series of challenges.</p>
     2.06 jQuery Smoother Scroll Effects (display PDF)</a></li>
 </ul>
 
-<ol start="2.7" type="1">
+<ol start="7" type="1">
   <li>Introduction to Page Location Tracking (8:00)</li>
   <li>The Crux of the Problem (6:09)</li>
   <li>Strategy (8:27)</li>
@@ -485,7 +484,7 @@ series of challenges.</p>
     2.17 jQuery Page Location Tracking (display PDF)</a></li>
 </ul>
 
-<ol start="2.18" type="1">
+<ol start="18" type="1">
   <li>Introduction to Scroll Effects with JS (6:04)</li>
 </ol>
 
@@ -496,7 +495,7 @@ series of challenges.</p>
     2.18 JS Scroll Effects START (download ZIP)</a></li>
 </ul>
 
-<ol start="2.19" type="1">
+<ol start="19" type="1">
   <li>Getting the Target - Part 1 (4:50)</li>
   <li>Getting the Target - Part 2 (5:15)</li>
   <li>Smooth Scroll Polyfill (4:45)</li>
@@ -516,7 +515,7 @@ series of challenges.</p>
     2.28 JS Scroll Effects (display PDF)</a></li>
 </ul>
 
-<ol start="2.29" type="1">
+<ol start="29" type="1">
   <li>Scription Site Introduction (5:54)</li>
 </ol>
 
@@ -539,7 +538,7 @@ series of challenges.</p>
 	2.29 Scription Part 2 Snippets (download ZIP)</a></li>
 </ul>
 
-<ol start="2.30" type="1">
+<ol start="30" type="1">
   <li>Header HTML (5:09)</li>
   <li>Pricing HTML</li>
   <li>Beginning Styling</li>
@@ -575,7 +574,7 @@ problem down into smaller pieces.</p>
 
 <h5>11 videos, 4 readings</h5>
 
-<ol type="1" start "3.01">
+<ol type="1" start="1">
   <li>Module Introduction</li>
   <li>Introduction to Objects and Data in JS</li>
 </ol>
@@ -587,7 +586,7 @@ problem down into smaller pieces.</p>
     3.02 JS Objects START (download ZIP)</a></li>
 </ul>
 
-<ol start="3.03" type="1">
+<ol start="3" type="1">
   <li>Objects Can Contain Arrays and Other Objects</li>
   <li>Functions Inside Objects Equals Methods</li>
   <li>Putting Objects and Functions Together</li>
@@ -602,7 +601,7 @@ problem down into smaller pieces.</p>
     3.07 JS Object Challenges (display PDF)</a></li>
 </ul>
 
-<ol start="3.08" type="1">
+<ol start="8" type="1">
   <li>Introduction to Pig Dice Game</li>
 </ol>
 
@@ -635,9 +634,9 @@ the JavaScript you have already learned while constructing a script with
 more functions and complexity. You will be able to then extend the
 script in many creative ways.</p>
 
-<h5>15 videos, 2 readings</h5>
+<p><small><small>15 videos, 2 readings</small></small></p>
 
-<ol type="1" start "4.01">
+<ol type="1" start="1">
   <li>Module Introduction</li>
   <li>Intro to the Game of Pig</li>
 </ol>
@@ -649,7 +648,7 @@ script in many creative ways.</p>
     4.02 Game of Pig START (download ZIP)</a></li>
 </ul>
 
-<ol start="4.03" type="1">
+<ol start="3" type="1">
   <li>Start the Game</li>
   <li>Set Up the Turn</li>
   <li>Throwing the Dice</li>
@@ -671,7 +670,7 @@ script in many creative ways.</p>
     4.14 Game of Pig (display PDF)</a></li>
 </ul>
 
-<ol start="4.15" type="1">
+<ol start="15" type="1">
   <li>Course Summary</li>
 </ol>
 <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
